2019-03-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Add support for using the Solaris mtmalloc
	library.  This is primarily for testing or as an alternative to
	Solaris umem.

2019-03-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (SetNexus): Smallest staging-area
	allocation is cache line size so declare it as such.

	* magick/fx.c: Functions in the fx module which return a new Image
	should return a null Image if an exception was thrown.  Also,
	assure that user has an opportunity to see the exception which was
	thrown.

	* magick/error.c (ThrowLoggedException): Throwing an exception is
	now thread-safe.

	* magick/pixel_cache-private.h: Moved pixel cache private
	definitions to private header.

2019-03-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (SetNexus): Pass x, y, columns, and rows
	rather than a pointer to RectangleInfo.  This should be easier to
	inline on modern CPUs.

2019-03-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (SetNexus): Cache resource limits in
	CacheInfo rather than repeatedly calling into the resource code in
	order to lessen the overhead of performing resource limit checks
	on the pixel cache views.

	* magick/resource.c (AcquireMagickResource): Use a lock for each
	resource in order to lessen contention.  Return a maximum 64-bit
	integer value if the resource has not been limited.  Previously
	returned -1 in this case but this was not documented.

2019-03-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/import.c (ImportViewPixelArea): If range between max and
	min is less than MagickEpsilon, produce a black image rather than
	throwing an exception.

	* coders/mat.c (ReadMATImage): Fix memory leak on unexpected end
	of file.  Fixes oss-fuzz 13556 "graphicsmagick/coder_MAT_fuzzer:
	Direct-leak in ReadMATImage". (Credit to OSS-Fuzz)

2019-03-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
