@@ -40,7 +40,9 @@
 <ul class="simple">
 <li>configure.ac: Add support for using the Solaris mtmalloc
 library.  This is primarily for testing or as an alternative to
-Solaris umem.</li>
+Solaris umem.
+Stop using posix_memalign() until it is uniformly more mature and
+reliably quick.</li>
 </ul>
 </blockquote>
 <p>2019-03-17  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
